<?xml version="1.0"?>
<package format="2">
  <name>lbr_msgs</name>
  <version>1.0.0</version>
  <description>Messages for the KUKA fast robot interface</description>
  <maintainer email="m.huber_1994@hotmail.de">mhubii</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>
  
  <exec_depend>message_runtime</exec_depend>
</package>
